fix word out of screen issue, change colouring

--- a/portfolio/src/main/webapp/css/style.css
+++ b/portfolio/src/main/webapp/css/style.css
@@ -4,7 +4,7 @@
 	text-decoration: None;
 }
 body {
-	background-image: linear-gradient(to top, #0ba360 0%, #3cba92 100%);
+	background-image: linear-gradient(-225deg, #473B7B 0%, #3584A7 51%, #30D2BE 100%);
 }
 .meta-header {
 	display: flex;
